--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "to-do-list",
+  "name": "tasksaver",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -20,14 +20,23 @@
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "autoprefixer": "^10.4.21",
+    "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.534.0",
+    "mongodb": "^6.18.0",
+    "mongoose": "^8.17.0",
     "next": "^15.4.5",
+    "next-auth": "^4.24.11",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.8.3"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10"
   }
 }
