Your commit message

--- a/.env.production
+++ b/.env.production
@@ -1,15 +1,17 @@
-# Production Environment Variables
+# Production Environment Variables for Vercel
 # Replace with your actual MongoDB Atlas connection string
 MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/mydatabase?retryWrites=true&w=majority
 
 # API Configuration
 NEXT_PUBLIC_USE_API=true
-NEXT_PUBLIC_API_URL=https://your-app-name.onrender.com
 
-# Next.js Environment
+# Next.js Environment - Update with your Vercel deployment URL
 NEXTAUTH_SECRET=jezUUSpxEn0EkoPMfdzq60Pz+uf5Il/aqNXFjjsju70=
-NEXTAUTH_URL=https://your-app-name.onrender.com
+NEXTAUTH_URL=https://your-vercel-app.vercel.app
 
 # Debug flags
 DEBUG_DB_CONNECTION=true
 NODE_ENV=production
+
+# Vercel-specific optimizations
+VERCEL=1
