Your commit message

--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
   "framework": "nextjs",
   "functions": {
     "src/app/api/**/*.ts": {
-      "maxDuration": 30
+      "maxDuration": 25
     }
   },
   "env": {
@@ -27,15 +27,20 @@
         },
         {
           "key": "Access-Control-Allow-Headers",
-          "value": "Content-Type, Authorization"
+          "value": "Content-Type, Authorization, Cookie"
+        },
+        {
+          "key": "Access-Control-Allow-Credentials",
+          "value": "true"
         }
       ]
     }
   ],
   "rewrites": [
     {
-      "source": "/api/(.*)",
-      "destination": "/api/$1"
+      "source": "/favicon.ico",
+      "destination": "/api/favicon"
     }
-  ]
+  ],
+  "regions": ["iad1"]
 }
